--- a/Home.html
+++ b/Home.html
@@ -3,8 +3,16 @@
 	<link rel="stylesheet" href="style.css">
 	<title>Prime Roller Dealership</title>
 	</head>
-<body>
+<body bgcolor="black">
+	<font color="white">
 	<center><h1><u>PRIME ROLLER</u></h1></center>
+	<nav>
+		  <li><a href="home.html">Home</a></li>
+     <li><a href="vehicles.html">Vehicle</a></li>
+     <li><a href="service.html">Service</a></li>
+     <li><a href="contact us.html">Contact us</a></li>
+
+	</nav>
 	<center><h2>Don't miss out the best dealership offers!</h2></center>
 	<section class="body">
 	<br>
@@ -13,17 +21,13 @@
 	<button>SEARCH</button>
 	<br>
 	<br>
-	<a href="Vehicle List.html" class="btn">SHOP NOW</a>
+	<a href="Vehicle List.html" class="btn">BUY NOW</a>
+	</font>
 	</section>
 	<center><img src="pic/pexels-mikebirdy-120049.jpg"width="1500"height="700"><center>
 <br>
 </font>
 	<footer class="footer">
-	<nav>
-	<a href="Services Offered.html">Services</a>
-	<a href="Dealership Information.html">About Us</a>
-	<a href="Contact Information.html">Contact</a>
-	</nav>
 	</footer>
 </body>
 </html>
